Fixed home title font cutoff on mobile

--- a/src/Home.css
+++ b/src/Home.css
@@ -22,8 +22,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 25px;
-  font-size: 1.5em;
+  gap: 5px;
+  font-size: min(1.5em, 5vw);
   margin-top: 25px;
   margin-bottom: 25px;
   margin-left: 25px;
